# AgentAI

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: workflow-graph.md
src/my_crew/: api.py  crew.py  demo_crew.py  evaluation.py  main.py  test_research_agent.py  test_workflow.py
src/my_crew/a2a/: __init__.py  communication.py  message.py  message_bus.py  protocol.py
src/my_crew/agents/: executor.py  factory.py  llm_judge.py  planner.py  researcher.py  supervisor.py  supervisor_controller.py  validator.py
src/my_crew/config/: agents.yaml  llm.py  loader.py  tasks.yaml
src/my_crew/tasks/: execution_task.py  factory.py  planning_task.py  research_task.py  validation_task.py
src/my_crew/tools/: api_tool.py  calculator_tool.py  file_reader_tool.py  logger_tool.py  memory_tool.py  notification_tool.py  registry.py  web_search_tool.py
src/my_crew/utils/: logger.py  metrics.py
src/my_crew/workflows/: hierarchical_flow.py  network_flow.py  parallel_flow.py  workflow_router.py
tests/: test_api.py  test_communication_bus.py  test_config.py  test_evaluation.py  test_memory_tool.py  test_metrics.py  test_parallel_flow.py  test_routing.py  test_supervisor_controller.py
