[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-crew"
version = "0.2.0"
description = "Production-style CrewAI multi-agent workflow with A2A-style communication."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
  { name = "Divya Rawat" }
]
dependencies = [
  "a2a-sdk==1.1.0",
  "crewai==1.14.5",
  "duckduckgo-search==8.1.1",
  "python-dotenv==1.2.2",
  "pyyaml==6.0.3",
  "requests==2.34.2",
]

[project.optional-dependencies]
dev = [
  "pytest==9.1.1",
]

[project.scripts]
my-crew = "my_crew.main:main"
my-crew-eval = "my_crew.evaluation:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
my_crew = ["config/*.yaml"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
